add jdk11 jvm option